# gmail-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  main.py  pyproject.toml  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_question.md
src/: __init__.py  auth_manager.py  gmail_client.py  models.py  server.py
src/resources/: __init__.py  email_etiquette.py  email_security_guidelines.py  email_signatures.py  html_email_templates.py  subject_line_guidelines.py
tests/: __init__.py
